--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   DateTime-0.72.tar.gz: 0fb0179a3d689ce7da703f13180083ccd12b6228
-sources:
   DateTime-1.03.tar.gz: 23cad043140988ea95ad8dcb3095cc5aded0464e
+sources:
+  DateTime-1.06.tar.gz: dbbaf07f3279b6bb1f6587eae30f0bf0c00074e4
